--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Vue + Tailwind components for Laravel Jetstream",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress open-ct",
+    "ci": "cypress run-ct"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,14 @@
     "javascript-time-ago": "^2.3.6",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2"
+  },
+  "devDependencies": {
+    "@cypress/vite-dev-server": "^2.2.1",
+    "@cypress/vue": "^3.0.5",
+    "@vitejs/plugin-vue": "^1.10.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.0",
+    "cypress": "^9.1.0",
+    "vite": "^2.6.14",
+    "vue": "^3.0.0"
   }
 }
