--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@cypress/vite-dev-server": "^2.2.1",
     "@cypress/vue": "^3.0.5",
+    "@cypress/request": "2.88.7",
     "@vitejs/plugin-vue": "^1.10.0",
     "@vitejs/plugin-vue-jsx": "^1.3.0",
     "cypress": "^9.1.0",
