--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.4.1",
-    "@inertiajs/inertia": "^0.9.1",
+    "@inertiajs/inertia": "^0.10.0",
+    "@inertiajs/inertia-vue3": "^0.5.2",
     "@jetstreamkit/v-query": "*",
     "javascript-time-ago": "^2.3.6",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2"
   },
   "devDependencies": {
+    "@cypress/request": "2.88.7",
     "@cypress/vite-dev-server": "^2.2.1",
     "@cypress/vue": "^3.0.5",
-    "@cypress/request": "2.88.7",
     "@vitejs/plugin-vue": "^1.10.0",
     "@vitejs/plugin-vue-jsx": "^1.3.0",
     "cypress": "^9.1.0",
