--- a/.github/workfllows/cypress.yml
+++ b/.github/workfllows/cypress.yml
@@ -1,13 +1,19 @@
 name: Cypress
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
-  cypress-run:
-    runs-on: ubuntu-20.04
+  cypress:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Run E2E tests 🧪
         uses: cypress-io/github-action@v2
+
       - name: Run Component tests 🧪
         uses: cypress-io/github-action@v2
         with:
